create route delete task, create routes tasks on swagger
