# src/domain/usecases/task/index.ts
@@ -1,2 +1,4 @@
 export { CreateTaskUseCase } from './createTask.usecase';
 export { UpdateTaskUseCase } from './updateTask.usecase';
+export { DeleteTaskUseCase } from './deleteTask.usecase';
+export { GetAllTaskUseCase } from './getAllTask.usecase';
