# src/http/controllers/task/index.ts
@@ -1,3 +1,4 @@
 export { CreateTaskController } from './createTask.controller';
 export { UpdateTaskController } from './updateTask.controller';
 export { GetAllTaskController } from './getAllTask.controller';
+export { DeleteTaskController } from './deleteTask.controller';
