# src/http/routes/tasks.routes.ts
@@ -1,17 +1,21 @@
 import { Router } from 'express';
-import { CustomRequest } from '../interfaces/customRequest';
 import { hasAuthentication } from '../middleware';
 
-import { CreateTaskController, GetAllTaskController, UpdateTaskController } from '../controllers/task';
-import { CreateTaskUseCase, UpdateTaskUseCase } from '@usecases/task';
-import { GetAllTaskUseCase } from '@usecases/task/getAllTask.usecase';
+import {
+  CreateTaskController, DeleteTaskController,
+  GetAllTaskController, UpdateTaskController
+} from '../controllers/task';
+import {
+  CreateTaskUseCase, DeleteTaskUseCase,
+  GetAllTaskUseCase, UpdateTaskUseCase
+} from '@usecases/task';
 
 const tasksRouter = Router();
 // This route is protected by the middleware - user can access only after login
 tasksRouter.use(hasAuthentication);
 
 // Get tasks list for user
-tasksRouter.get('/', (req: CustomRequest, res) => {
+tasksRouter.get('/', (req, res) => {
   const useCase = new GetAllTaskUseCase();
   const controller = new GetAllTaskController(useCase);
 
@@ -19,7 +23,7 @@ tasksRouter.get('/', (req: CustomRequest, res) => {
 });
 
 // Create task
-tasksRouter.post('/', (req: CustomRequest, res) => {
+tasksRouter.post('/', (req, res) => {
   const useCase = new CreateTaskUseCase();
   const controller = new CreateTaskController(useCase);
 
@@ -27,9 +31,17 @@ tasksRouter.post('/', (req: CustomRequest, res) => {
 });
 
 // Update task
-tasksRouter.put('/:id', (req: CustomRequest, res) => {
+tasksRouter.put('/:id', (req, res) => {
   const useCase = new UpdateTaskUseCase();
   const controller = new UpdateTaskController(useCase);
+
+  return controller.handle(req, res);
+});
+
+// Delete task
+tasksRouter.delete('/:id', (req, res) => {
+  const useCase = new DeleteTaskUseCase();
+  const controller = new DeleteTaskController(useCase);
 
   return controller.handle(req, res);
 });
